--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,4 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-uk'
 title = "CutThroat's Digital Garden"
-theme = "hugo-theme-techdoc"
-
-[params]
-  menu_style = "open-menu"
+theme = "docdock"
