--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
+baseURL = 'https://cutthroat78.github.io/digital-garden/'
 languageCode = 'en-uk'
 title = "CutThroat's Digital Garden"
 theme = "docdock"
