switch to techdoc to try out what it is like

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,4 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-uk'
 title = "CutThroat's Digital Garden"
-theme = "docdock"
-
-[params]
-disableNavChevron = true
+theme = "hugo-theme-techdoc"
