--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/docdock"]
 	path = themes/docdock
 	url = https://github.com/vjeantet/hugo-theme-docdock.git
+[submodule "themes/shadocs"]
+	path = themes/shadocs
+	url = https://github.com/jgazeau/shadocs.git
