--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,34 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-uk'
+# Base URL used when generating links to your pages
+# Set to the URL for your site
+baseURL = "https://sionnach.xyz"
+
+# The name of this wonderful theme ;-).
+theme = 'hugo-digital-gardenscape-theme'
+
+# Basic metadata configuration for your blog.
 title = "Sionnach's Digital Garden"
-theme = "shadocs"
+author = "John"
+languageCode = "en"
+
+# Generate a nice robots.txt for SEO
+enableRobotsTXT = true
 
 [params]
-  logo = "images/house-solid.svg"
-  logoTouch = "images/house-solid.svg"
-  favicon = "images/icon.png"
-  toc = true
+  # The "description" of your website. This is used in the meta data of your generated html.
+  description = "Sionnach's Personal Website and Digital Garden"
+
+  favicon = "favicon.png"
+
+  # Another "title" :-). This one is used as the site_name on the Hugo's internal
+  # opengraph structured data template.
+  # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
+  title = "Sionnach's Digital Garden"
+
+[markup]
+  [markup.tableOfContents]
+    startLevel = 1
+    endLevel = 6
+    ordered = false
+
+[taxonomies]
+  tag = 'tags'
