--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-digital-gardenscape-theme"]
-	path = themes/hugo-digital-gardenscape-theme
-	url = https://github.com/cutthroat78/hugo-digital-gardenscape-theme
+[submodule "themes/lynx"]
+	path = themes/lynx
+	url = https://github.com/jpanther/lynx
