--- a/config.toml
+++ b/config.toml
@@ -1,34 +1,23 @@
-# Base URL used when generating links to your pages
-# Set to the URL for your site
-baseURL = "https://sionnach.xyz"
+theme = "lynx"
+title = "Sionnach's Website"
 
-# The name of this wonderful theme ;-).
-theme = 'hugo-digital-gardenscape-theme'
+enableEmoji = true
+disableKinds = ["taxonomy", "term"]
 
-# Basic metadata configuration for your blog.
-title = "Sionnach's Digital Garden"
-author = "John"
-languageCode = "en"
+[params.author]
+  name = "Sionnach"
+  headline = "Sionnach.s Website"
+  image = "favicon.png"
+  links = [
+    { link = { href = "content/index.md", text = "Writings" } },
+    { link = { href = "https://ko-fi.com/sionnachxyz", text = "Ko-Fi (Donations)" } },
+    { youtube = "https://youtube.com/@sionnachxyz" },
+    { instagram = "https://blackscreen.app/" },
+  ]
 
-# Generate a nice robots.txt for SEO
-enableRobotsTXT = true
+[markup.highlight]
+  noClasses = false
 
-[params]
-  # The "description" of your website. This is used in the meta data of your generated html.
-  description = "Sionnach's Personal Website and Digital Garden"
-
-  favicon = "favicon.png"
-
-  # Another "title" :-). This one is used as the site_name on the Hugo's internal
-  # opengraph structured data template.
-  # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-  title = "Sionnach's Digital Garden"
-
-[markup]
-  [markup.tableOfContents]
-    startLevel = 1
-    endLevel = 6
-    ordered = false
-
-[taxonomies]
-  tag = 'tags'
+[markup.goldmark]
+[markup.goldmark.renderer]
+  unsafe = true
