--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ disableKinds = ["taxonomy", "term"]
 
 [params.author]
   name = "Sionnach"
-  headline = "I write about what I like. Often times about queerness, transness, neurodivergence, anarchism, Irish politics, computers, art, philosophy, sociology, or whatever else I am into or thinking about at the moment"
+  headline = "Anarchist in Ireland. I write about what I like, which can include, but not limited to queerness, transness, non-monogamy and relationship anarchy, neurodivergence, anarchism, solarpunk, Irish politics, computers and FOSS, art, philosophy, sociology, history, anthropology or whatever else I may into or thinking about"
   image = "favicon.png"
   links = [
     { link = { href = "writings/", text = "Writings", target = "_self" } },
