--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ disableKinds = ["taxonomy", "term"]
     { link = { href = "writings/", text = "Writings", target = "_self" } },
     { link = { href = "readings/", text = "Recommended Reading", target = "_self" } },
     { kofi = { href = "https://ko-fi.com/sionnachxyz", text = "Donate (Ko-Fi)" } },
+    { link = { href = "https://ainriail.org", text = "Ainriail - Dublin Event Noticeboard", target = "_self" } },
     { youtube = "https://youtube.com/@sionnachxyz" },
   ]
 
