--- a/config.toml
+++ b/config.toml
@@ -9,8 +9,8 @@ disableKinds = ["taxonomy", "term"]
   headline = "Anarchist in Ireland. I write about what I like, which can include, but not limited to queerness, transness, non-monogamy and relationship anarchy, neurodivergence, anarchism, solarpunk, Irish politics, computers and FOSS, art, philosophy, sociology, history, anthropology or whatever else I may into or thinking about"
   image = "favicon.png"
   links = [
-    { link = { href = "writings/", text = "Writings", target = "_self" } },
-    { link = { href = "readings/", text = "Recommended Reading", target = "_self" } },
+    { writing = { href = "writings/", text = "Writings" } },
+    { reading = { href = "readings/", text = "Recommended Reading" } },
     { kofi = { href = "https://ko-fi.com/sionnachxyz", text = "Donate (Ko-Fi)" } },
     { email = { href = "contact-sionnach.truffle781@slmails.com", text = "Contact (Email)" } },
     { ainriail = { href = "https://ainriail.org", text = "Ainriail - Dublin Event Noticeboard" } },
