Added my mastodon to start page

--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,7 @@ disableKinds = ["taxonomy", "term"]
   links = [
     { writing = { href = "writings/", text = "My Writings" } },
     { reading = { href = "readings/", text = "Recommended Reading" } },
+    { mastodon = "https://kolektiva.social/@Sionnach" },
     { kofi = { href = "https://ko-fi.com/sionnachxyz", text = "Donate (Ko-Fi)" } },
     { ainriail = { href = "https://ainriail.org", text = "Ainriail - Dublin Event Noticeboard" } },
     { youtube = "https://youtube.com/@sionnachxyz" },
